2001-07-15  Jody Goldberg <jgoldberg@home.com>

	* src/sheet.c (sheet_freeze_panes) : Avoid double calling set_panes.

2001-07-15  Jody Goldberg <jgoldberg@home.com>

	* src/sheet-control-gui.c (scg_resize) : Adust to change in semantics
	  and name from sheet::frozen::bottom_right ->
	                sheet::unfrozen_top_left.
	(scg_scrollbar_config) : ditto.
	(scg_set_left_col) : ditto.
	(scg_set_top_row) : ditto.
	(scg_make_cell_visible) : ditto.
	(scg_set_panes) : ditto.
	* src/sheet.c (sheet_new) : ditto.
	(sheet_update_only_grid) : ditto.
	(sheet_freeze_panes) : ditto.
	(sheet_is_frozen) : ditto.

	* src/sheet-merge.c (sheet_merge_add) : don't regen the spans until
	  after the merge is listed.

2001-07-14  Jody Goldberg <jgoldberg@home.com>

	* src/gnumeric-sheet.c (gnumeric_sheet_handle_motion) : support
	  reverse scroll for things that started the drag adjacent.  That is
	  about as clear as mud, see the deleted BUG entry.
	(gsheet_sliding_callback) : ditto.

2001-07-14  Zbigniew Chyla  <cyba@gnome.pl>

	* src/error-info.[ch]
	(error_info_new_vprintf): New.
	(error_info_new_printf): Use error_info_new_vprintf.
	(error_info_peek_message): Constified.

	* src/command-context-priv.h (struct CommandContextClass): Added
	error.error_info virtual.

	* src/command-context.[ch] (gnumeric_error_error_info): New.

	* src/io-context.[ch]
	(gnumeric_io_error_system, gnumeric_io_error_read,
	gnumeric_io_error_save): Use gnumeric_io_error_string.
	(gnumeric_io_error_string): New.
	(gnumeric_io_error_display): Renamed from
	gnumeric_io_error_info_display. Use CommandContext's virtual -
	gnumeric_error_error_info.
	(gnumeric_io_error_info_clear, gnumeric_io_has_error_info): Removed.
	s/gnumeric_io_clear_error/gnumeric_io_error_clear
	s/gnumeric_io_error_info_push/gnumeric_io_error_push/
	s/gnumeric_io_error_info_pop/gnumeric_io_error_pop/

	* src/gnumeric-util.c
	(ctree_insert_error_info): Automatically expand most nodes (don't expand
	nodes with siblings).